# textmagic

./: Clone All repos.sh  README.md
textmagic-rest-cpp-v2/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md  git_push.sh
textmagic-rest-cpp-v2/DOTgit/: FETCH_HEAD  config  index  packed-refs
textmagic-rest-cpp-v2/api/: TextMagicApi.cpp  TextMagicApi.h
textmagic-rest-cpp-v2/model/: AssignContactsToListInputObject.cpp  AssignContactsToListInputObject.h  BadRequestResponse.cpp  BadRequestResponse.h  BadRequestResponse_errors.cpp  BadRequestResponse_errors.h  BlockContactInputObject.cpp  BlockContactInputObject.h  BulkSession.cpp  BulkSession.h  BuyDedicatedNumberInputObject.cpp  BuyDedicatedNumberInputObject.h  CallPriceResponse.cpp  CallPriceResponse.h  Chat.cpp  Chat.h  CheckPhoneVerificationCodeTFAInputObject.cpp  CheckPhoneVerificationCodeTFAInputObject.h  ClearAndAssignContactsToListInputObject.cpp  ClearAndAssignContactsToListInputObject.h  CloseChatsBulkInputObject.cpp  CloseChatsBulkInputObject.h  Contact.cpp  Contact.h  ContactCustomField.cpp  ContactCustomField.h  ContactImage.cpp  ContactImage.h  ContactNote.cpp  ContactNote.h  Conversation.cpp  Conversation.h  Country.cpp  Country.h  CreateContactInputObject.cpp  CreateContactInputObject.h  CreateContactNoteInputObject.cpp  CreateContactNoteInputObject.h  (+288 more)
(+1925 files in other folders)
